--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -12,7 +12,8 @@ body {
 .full-body-container {
   max-width: 960px;
   margin: 0 auto;
-  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 .header-section {
@@ -49,10 +50,11 @@ body {
 
 .google-colors h1 {
   display: inline;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: bold;
   margin: 0;
   padding: 0;
+  text-align: left;
 }
 
 #google-c {
@@ -105,9 +107,10 @@ button[type="submit"] {
   color: white;
   padding: 10px 20px;
   font-size: 1.2em;
-  border-radius: 5px;
+  border-radius: 25px;
   border: none;
   transition: background-color 0.2s;
+  align-self: center;
 }
 
 button[type="submit"]:hover {
@@ -123,7 +126,7 @@ button[type="submit"]:hover {
 }
 
 .slidecontainer {
-  width: 100%; 
+  width: 100%;
 }
 
 /* The slider itself */
@@ -131,7 +134,7 @@ input[type="range"] {
   -webkit-appearance: none;
   width: 100%;
   height: 15px;
-  border-radius: 5px;  
+  border-radius: 5px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -141,7 +144,8 @@ input[type="range"] {
 
 /* Mouse-over effects */
 input[type="range"]:hover {
-  opacity: 1; /* Fully shown on mouse-over */
+  opacity: 1;
+  /* Fully shown on mouse-over */
 }
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
@@ -150,7 +154,7 @@ input[type="range"]::-webkit-slider-thumb {
   appearance: none;
   width: 25px;
   height: 25px;
-  border-radius: 50%; 
+  border-radius: 50%;
   background: #4285f4;
   cursor: pointer;
 }
@@ -161,4 +165,8 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 50%;
   background: #4285f4;
   cursor: pointer;
+}
+
+.button-holder {
+  text-align: center;
 }
