--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -119,7 +119,13 @@
       const topCountries = await postData('/process_input', userInput);
 
       // Generate and display the output
-      outputElement.innerHTML = `<span class="output-message">Your top 5 countries are: ${topCountries.join(', ')}</span>`;
+      outputElement.innerHTML = `
+        <span class="output-message">
+            Your top 5 countries are:
+            <ul>
+                ${topCountries.map(country => `<li>${country.name} (${(country.score * 100).toFixed(2)}%)</li>`).join('')}
+            </ul>
+        </span>`;
 
     });
 
@@ -244,7 +250,13 @@
       const result = await response.json();
 
       const resultElement = document.getElementById("result");
-      resultElement.innerHTML = `<span class="output-message">Your top 5 countries are: ${result.join(", ")}.</span>`;
+      resultElement.innerHTML = `
+  <span class="output-message">
+      Your top 5 countries are:
+      <ul>
+          ${result.map(country => `<li>${country.name} (${(country.score * 100).toFixed(2)}%)</li>`).join('')}
+      </ul>
+  </span>`;
 
     }
     const form = document.getElementById("questionnaire-form");
