--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -123,7 +123,7 @@
         <span class="output-message">
             Your top 5 countries are:
             <ul>
-                ${topCountries.map(country => `<li>${country.name} (${(country.score * 100).toFixed(2)}%)</li>`).join('')}
+                ${topCountries.map(country => `<li>${country.name} (${(country.score * 100).toFixed(2)}%) ${country.attractions}  <br/>${country.attractions}<br/><br/>  </li>`).join('')}
             </ul>
         </span>`;
 
@@ -254,7 +254,7 @@
   <span class="output-message">
       Your top 5 countries are:
       <ul>
-          ${result.map(country => `<li>${country.name} (${(country.score * 100).toFixed(2)}%)</li>`).join('')}
+          ${result.map(country => `<li>${country.name} (${(country.score * 100).toFixed(2)}%)  <br/>${country.attractions}<br/><br/> </li>`).join('')}
       </ul>
   </span>`;
 
